syntax = "proto3";

package lighting;

service LightingService {
  rpc setLighting(stream LightingProfile) returns (LightResponse);
}

message LightingProfile {
  string profileId = 1;
  float brightness = 2;
  float duration = 3; // New field for duration in minutes
}

message LightResponse {
  string status = 1;
}
